--- a/portfolio/FinTech/index.html
+++ b/portfolio/FinTech/index.html
@@ -891,7 +891,7 @@ img {
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/Original(1).png" alt="Cybomb" class="logo">
+        <img src="images/logo.png" alt="Cybomb" class="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
