--- a/portfolio/FinTech/index.html
+++ b/portfolio/FinTech/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cybomb— FinTech Solutions</title>
+    <title>Aitals— FinTech Solutions</title>
 
     <!-- Bootstrap & Icons -->
     <link
@@ -926,7 +926,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="Cybomb" class="logo" />
+          <img src="images/logo.png" alt="Aitals" class="logo" />
         </a>
         <button
           class="navbar-toggler"
@@ -988,7 +988,7 @@
     <section id="services" class="services">
       <div class="container">
         <div class="section-title">
-          <h2>End-to-End Aitals Solutions</h2>
+          <h2>End-to-End FinTech Solutions</h2>
           <p>
             We blend security, innovation, and simplicity to help you grow with
             confidence.
@@ -1279,7 +1279,7 @@
     <section id="why-us" class="why-us">
       <div class="container">
         <div class="section-title">
-          <h2>The Advantages of Working with Cybomb</h2>
+          <h2>The Advantages of Working with Aitals</h2>
           <p>
             We don't just build products—we craft solutions that transform your
             business.
@@ -1745,7 +1745,7 @@
         <div class="footer-bottom">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2025 Cybomb FinTech Solutions. All rights reserved.</p>
+              <p>&copy; 2025 Aitals Technologies. All rights reserved.</p>
             </div>
             <div class="col-md-6 text-md-end">
               <a href="#" class="me-3">Privacy Policy</a>
