--- a/portfolio/Restaurant/index.html
+++ b/portfolio/Restaurant/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Savory Bites | Restaurant</title>
+    <title>Aitals Bites | Restaurant</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -267,7 +267,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Savory Bites</a>
+        <a class="navbar-brand" href="#">Aitals Bites</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -311,7 +311,7 @@
             <div class="hero-content">
               <h1>Experience Culinary Excellence</h1>
               <p>
-                At Savory Bites, we craft unforgettable dining experiences with
+                At Aitals Bites, we craft unforgettable dining experiences with
                 locally sourced ingredients and innovative recipes.
               </p>
               <a href="#menu" class="btn btn-primary me-3">View Menu</a>
@@ -414,7 +414,7 @@
           <div class="col-lg-6">
             <h2 class="section-title text-start">Our Story</h2>
             <p>
-              Founded in 2010, Savory Bites began as a small family-owned
+              Founded in 2010, Aitals Bites began as a small family-owned
               restaurant with a passion for creating exceptional dining
               experiences. Our journey started with a simple philosophy: use the
               freshest ingredients to create dishes that tell a story.
@@ -545,7 +545,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6">
-            <h5>Savory Bites</h5>
+            <h5>Aitals Bites</h5>
             <p>
               Experience culinary excellence with our innovative dishes crafted
               from the finest ingredients.
@@ -594,7 +594,7 @@
         <div class="row">
           <div class="col-12">
             <div class="copyright">
-              <p>&copy; 2023 Savory Bites. All Rights Reserved.</p>
+              <p>&copy; 2025 Aitals Technologies. All Rights Reserved.</p>
             </div>
           </div>
         </div>
