--- a/portfolio/E-Learning/index.html
+++ b/portfolio/E-Learning/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LearnHub - Online Learning Platform</title>
+    <title>AitalsHub - Online Learning Platform</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -202,7 +202,7 @@
     >
       <div class="container">
         <a class="navbar-brand" href="#">
-          <i class="fas fa-graduation-cap me-2"></i>LearnHub
+          <i class="fas fa-graduation-cap me-2"></i>AitalsHub
         </a>
         <button
           class="navbar-toggler"
@@ -796,10 +796,10 @@
         <div class="row g-4">
           <div class="col-lg-4">
             <h4 class="mb-3">
-              <i class="fas fa-graduation-cap me-2"></i>LearnHub
+              <i class="fas fa-graduation-cap me-2"></i>AitalsHub
             </h4>
             <p class="footer-text">
-              LearnHub is an online learning platform dedicated to providing
+              AitalsHub is an online learning platform dedicated to providing
               high-quality education to students worldwide.
             </p>
             <div class="social-icons">
@@ -865,7 +865,7 @@
         <div class="row align-items-center">
           <div class="col-12 text-center">
             <p class="footer-text mb-0">
-              © 2025 LearnHub. All rights reserved.
+              © 2025 Aitals Technologies. All rights reserved.
             </p>
           </div>
         </div>
