--- a/portfolio/Fitness/index.html
+++ b/portfolio/Fitness/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FitLife - Transform Your Body, Transform Your Life</title>
+    <title>AitalsLife - Transform Your Body, Transform Your Life</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -523,7 +523,7 @@
       class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Fit<span>Life</span></a>
+        <a class="navbar-brand" href="#">Aitals<span>Life</span></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -579,7 +579,7 @@
     <!-- Features Section -->
     <section class="py-5">
       <div class="container">
-        <h2 class="section-title">Why Choose FitLife?</h2>
+        <h2 class="section-title">Why Choose AitalsLife?</h2>
         <div class="row">
           <div class="col-md-4">
             <div class="feature-card fade-in">
@@ -1088,7 +1088,7 @@
                 </div>
               </div>
               <p>
-                "FitLife transformed my approach to fitness. The trainers are
+                "AitalsLife transformed my approach to fitness. The trainers are
                 amazing and the community keeps me motivated. I've never felt
                 better!"
               </p>
@@ -1142,7 +1142,7 @@
               </div>
               <p>
                 "With the cardio program and support from trainers, I completed
-                my first marathon. FitLife gave me the confidence to push my
+                my first marathon. AitalsLife gave me the confidence to push my
                 limits."
               </p>
               <div class="mt-3">
@@ -1285,7 +1285,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-0">
-            <h5>FitLife</h5>
+            <h5>AitalsLife</h5>
             <p>
               Your premier destination for fitness and wellness. We're committed
               to helping you achieve your health goals in a supportive community
@@ -1368,7 +1368,9 @@
           </div>
         </div>
         <div class="copyright">
-          <p class="mb-0">&copy; 2025 FitLife. All rights reserved.</p>
+          <p class="mb-0">
+            &copy; 2025 Aitals Technologies. All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
