--- a/portfolio/Healthcare/index.html
+++ b/portfolio/Healthcare/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediCare - Your Health, Our Priority</title>
+    <title>AitalsCare - Your Health, Our Priority</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -265,7 +265,7 @@
     >
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><i class="fas fa-heartbeat me-2"></i>MediCare</a
+          ><i class="fas fa-heartbeat me-2"></i>AitalsCare</a
         >
         <button
           class="navbar-toggler"
@@ -427,10 +427,10 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0 about-section-mobile-center">
-            <h2 class="mb-4">Why Choose MediCare?</h2>
+            <h2 class="mb-4">Why Choose AitalsCare?</h2>
             <p class="mb-4">
-              At MediCare, we combine medical expertise with compassionate care
-              to provide the best possible outcomes for our patients.
+              At AitalsCare, we combine medical expertise with compassionate
+              care to provide the best possible outcomes for our patients.
             </p>
             <ul class="list-unstyled">
               <li class="mb-3">
@@ -606,7 +606,7 @@
                 </div>
               </div>
               <p class="mb-0">
-                "The care I received at MediCare was exceptional. Dr. Johnson
+                "The care I received at AitalsCare was exceptional. Dr. Johnson
                 took the time to explain everything and made me feel comfortable
                 throughout my treatment."
               </p>
@@ -779,7 +779,7 @@
       <div class="container">
         <div class="row g-4">
           <div class="col-lg-4 col-md-6">
-            <h5><i class="fas fa-heartbeat me-2"></i>MediCare</h5>
+            <h5><i class="fas fa-heartbeat me-2"></i>AitalsCare</h5>
             <p>
               Providing comprehensive healthcare services with compassion and
               excellence. Your health is our top priority.
@@ -837,7 +837,9 @@
           </div>
         </div>
         <div class="copyright text-center">
-          <p class="mb-0">&copy; 2025 Aitals. All rights reserved.</p>
+          <p class="mb-0">
+            &copy; 2025 Aitals Technologies. All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
