--- a/portfolio/Painting/index.html
+++ b/portfolio/Painting/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ArtVista Gallery | Premium Paintings</title>
+    <title>Aitals Gallery | Premium Paintings</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -363,7 +363,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">ArtVista Gallery</a>
+        <a class="navbar-brand" href="#">Aitals Gallery</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -708,7 +708,7 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <h2 class="section-title text-start">Our Story</h2>
             <p class="lead">
-              ArtVista Gallery was founded in 2010 with a simple mission: to
+              Aitals Gallery was founded in 2010 with a simple mission: to
               connect art lovers with exceptional paintings from talented
               artists worldwide.
             </p>
@@ -819,9 +819,9 @@
           <div class="col-md-4 mb-4">
             <div class="testimonial-card">
               <div class="testimonial-text">
-                "The painting I purchased from ArtVista has completely
-                transformed my living room. The quality is exceptional and it
-                arrived perfectly packaged."
+                "The painting I purchased from Aitals has completely transformed
+                my living room. The quality is exceptional and it arrived
+                perfectly packaged."
               </div>
               <div class="testimonial-author">- Sarah Johnson</div>
               <div class="rating">
@@ -837,7 +837,7 @@
             <div class="testimonial-card">
               <div class="testimonial-text">
                 "As an interior designer, I frequently source art for clients.
-                ArtVista is my go-to for unique, high-quality pieces that always
+                Aitals is my go-to for unique, high-quality pieces that always
                 impress."
               </div>
               <div class="testimonial-author">- Michael Torres</div>
@@ -979,7 +979,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-0">
-            <h3 class="mb-3">ArtVista Gallery</h3>
+            <h3 class="mb-3">Aitals Gallery</h3>
             <p class="mb-4">
               Bringing exceptional art to collectors and enthusiasts since 2010.
             </p>
@@ -1035,7 +1035,7 @@
           </div>
         </div>
         <div class="copyright">
-          <p>&copy; 2025 ArtVista Gallery. All rights reserved.</p>
+          <p>&copy; 2025 Aitals Technologies. All rights reserved.</p>
         </div>
       </div>
     </footer>
